--- a/index.html
+++ b/index.html
@@ -415,41 +415,41 @@
 			</p>
           </div>
         </div>
-        <!-- <div class="row d-flex">
+        <div class="row d-flex">
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="https://github.com/rishabhnmishra/SQL_Music_Store_Analysis/blob/main/Music_Store_Query.sql" class="block-20 zoom-effect" style="background-image: url('images/proj_1.jpg');">
+              <a href="https://vijayit70.github.io/Portfolio-Website/" class="block-20 zoom-effect" style="background-image: url('images/proj_1.png');">
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/rishabhnmishra/SQL_Music_Store_Analysis/blob/main/Music_Store_Query.sql">Digital Music Store Data Analysis using SQL</a></h3>
-                <p>Analyzed music store data using advanced SQL queires to identify gaps and increase the business growth.</p>
+                <h3 class="heading"><a href="https://vijayit70.github.io/Portfolio-Website/">Personal Portfolio Wesite.</a></h3>
+                <p>Developed a fully responsive personal website.</p>
               </div>
             </div>
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="https://github.com/rishabhnmishra/Python_Diwali_Sales_Analysis/blob/main/Diwali_Sales_Analysis.ipynb" class="block-20 zoom-effect" style="background-image: url('images/proj_2.jpg');">
+              <a href="https://vijayit70.github.io/Personal-Website/" class="block-20 zoom-effect" style="background-image: url('images/proj_2.png');">
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/rishabhnmishra/Python_Diwali_Sales_Analysis/blob/main/Diwali_Sales_Analysis.ipynb">Data Analysis using Python Project for Beginners</a></h3>
-                <p>Performed exploratory data analysis on diwali sales data using Python to improve the customer experience.</p>
+                <h3 class="heading"><a href="https://vijayit70.github.io/Personal-Website/">Simple Personal Website.</a></h3>
+                <p>Designed a simple personal wesite which include our personal and professional information. </p>
               </div>
             </div>
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry">
-              <a href="https://github.com/rishabhnmishra/Madhav_Store_Analysis_PowerBI/blob/main/Madhav%20Store%20dashboard.jpg" class="block-20 zoom-effect" style="background-image: url('images/proj_3.jpg');">
+              <a href="https://vijayit70.github.io/my-nike-card/" class="block-20 zoom-effect" style="background-image: url('images/pro_3.png');">
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/rishabhnmishra/Madhav_Store_Analysis_PowerBI/blob/main/Madhav%20Store%20dashboard.jpg">Power BI Sales dashboard Project for Beginners</a></h3>
-                <p>Designed a power bi dashboard for Madhav Store to track and analyze the online sales data acorss India.</p>
+                <h3 class="heading"><a href="https://vijayit70.github.io/my-nike-card/">Animated Nike Card.</a></h3>
+                <p>Designed a animated nike card when you click on colour it change from one shoes to another. using html,css,js.</p>
               </div>
             </div>
           </div>
-        </div> -->
+        </div>
 	<br>
 		<!-- added justify-content-center to center align the last two projects -->
 		<!-- <div class="row d-flex justify-content-center">  
