--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
     					<span class="date">2019-2020</span>
     					<h2>10th passout from</h2>
     					<span class="position">Takshashila Public Model School Nowgoan District Chhatarpur MP</span>
-    					<p class="mt-4">Grade: First class distinction.</p>
+    					<p class="mt-4">Grade: First class distinction (61%).</p>
     				</div>
     			</div>
 
@@ -389,7 +389,7 @@
     					<span class="date">2021-2022</span>
     					<h2>Higher Secondary School</h2>
     					<span class="position">Takshashila Senior Secondary School Nowgoan District Chhatarpur MP</span>
-    					<p class="mt-4">Grade: First class distinction.</p>
+    					<p class="mt-4">Grade: First class distinction (69%).</p>
     				</div>
 				</div>
     		</div>
@@ -410,9 +410,10 @@
           <div class="col-md-7 heading-section text-center ftco-animate">
             <h1 class="big big-2">Projects</h1>
             <h2 class="mb-4">Projects</h2>
-            <p>At currently we have no any project but i am working on so uploaded begin.
-				i am just design a simple application using html css and js so these are uploaded on github.
-			</p>
+            <p>In my entire study or semester i have work on several projects with my team member and gain experience, learning new things that 
+	       i have execute in my future scope .i have designed personal portfolio website using web technologies and also work on one minor project.
+		there are some project structure given below.
+		</p>
           </div>
         </div>
         <div class="row d-flex">
