--- a/index.html
+++ b/index.html
@@ -239,13 +239,19 @@
 
 								<div class="skill-mf">
 									<p class="title-s">Skills</p>
-									<span>JAVA</span> <span class="pull-right">75%</span>
+									<span>JAVA</span> <span class="pull-right">65%</span>
+									<div class="progress">
+										<div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="95" aria-valuemin="0"
+											aria-valuemax="100"></div>
+									</div>
+
+									<span>C++</span> <span class="pull-right">50%</span>
 									<div class="progress">
 										<div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="95" aria-valuemin="0"
 											aria-valuemax="100"></div>
 									</div>
 									
-									<span>Html, Css, Js</span> <span class="pull-right">85%</span>
+									<span>HTML, CSS, JS</span> <span class="pull-right">85%</span>
 									<div class="progress">
 										<div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0"
 											aria-valuemax="100"></div>
@@ -280,7 +286,7 @@
 								<h1 class="big">About</h1>
 								<h2 class="mb-4">About Me</h2>
 								
-								<p>I am currently a third year undergraduate student passionate of my coding skill in my fields. So I am a frontend as well as Java developer. And I always practice a lot to strengthen my skills. 
+								<p>I am currently a third year undergraduate student passionate of my coding skill in my fields. So I am a frontend as well as Java developer. And I always practice a lot to strength my skills. 
 									I would be interested to work in such an IT industry where I can upgrade my skills and knowledge and contribute to the growth of the industry.</p>
 								<ul class="about-info mt-4 px-md-0 px-2">
 									<li class="d-flex"><span>Profile:</span> <span> Web & Java Developer </span></li>
@@ -321,7 +327,7 @@
           <div class="col-md-10 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Resume</h1>
             <h2 class="mb-4">Resume</h2>
-            <p>Experiance of 2.5 years in my skillls. Good knowledge in dbms, object oriented programming, basic in data structure algorithms and project management.</p>
+            <p> As a Fresher i have no work experience,but i have Good knowledge in dbms, object oriented programming, basic in data structure algorithms and project management.</p>
           </div>
         </div>
 
